<resources>
    <string name="app_name">Expense Management</string>
    <string name="add">Add New Trips</string>
    <string name="done">Done</string>
    <string name="delete_all">Delete All Trips</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="upload">Upload</string>

    <string name="no_trips">You have no trip. Please create a new one</string>

    <string name="trip_name">Trip Name <font color='red'>*</font></string>
    <string name="destination">Destination <font color='red'>*</font></string>
    <string name="vehicle">Vehicle <font color='red'>*</font></string>
    <string name="date_of_the_trip">Date of the Trip <font color='red'>*</font></string>
    <string name="description">Description </string>
    <string name="dropdown_select_risk_assessment">Require Risks Assessment? <font color='red'>*</font></string>
    <string name="dropdown_select_status">Status <font color='red'>*</font></string>

    <string name="trip_expenses">Trip Expenses</string>
    <string name="add_expense">Add Expense</string>
    <string name="type_expense">Type Expense <font color='red'>*</font></string>
    <string name="amount">Amount <font color='red'>*</font></string>
    <string name="time_of_the_expense">Time of the Expense <font color='red'>*</font></string>
    <string name="comment">Comment</string>
    <string name="no_expense">You have no expense. Please create a new one</string>

    <string name="search_trip">Search</string>
    <string name="search_trip_placeholder">Search by</string>

</resources>