<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTripActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="635dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:focusableInTouchMode="true">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/field_trip_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/trip_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_trip_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/field_destination"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/destination"
                app:layout_constraintEnd_toEndOf="@id/field_trip_name"
                app:layout_constraintStart_toStartOf="@id/field_trip_name"
                app:layout_constraintTop_toBottomOf="@id/field_trip_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/field_vehicle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/vehicle"
                app:layout_constraintEnd_toEndOf="@id/field_destination"
                app:layout_constraintStart_toStartOf="@id/field_destination"
                app:layout_constraintTop_toBottomOf="@id/field_destination">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_vehicle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dropdown_box_risk_assessment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:layout_constraintEnd_toEndOf="@id/field_vehicle"
                app:layout_constraintStart_toStartOf="@id/field_vehicle"
                app:layout_constraintTop_toBottomOf="@id/field_vehicle">
                <AutoCompleteTextView
                    android:id="@+id/dropdown_select_risk_assessment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dropdown_select_risk_assessment"
                    android:inputType="none"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/field_date_of_the_trip"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/date_of_the_trip"
                app:layout_constraintEnd_toEndOf="@id/dropdown_box_risk_assessment"
                app:layout_constraintStart_toStartOf="@id/dropdown_box_risk_assessment"
                app:layout_constraintTop_toBottomOf="@id/dropdown_box_risk_assessment">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_date_of_the_trip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="showDatePickerDialog"
                    android:inputType="datetime"
                    android:focusable="false"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/field_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/description"
                app:layout_constraintEnd_toEndOf="@id/field_date_of_the_trip"
                app:layout_constraintStart_toStartOf="@id/field_date_of_the_trip"
                app:layout_constraintTop_toBottomOf="@id/field_date_of_the_trip">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:lines="6"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dropdown_box_select_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:layout_constraintEnd_toEndOf="@id/field_description"
                app:layout_constraintStart_toStartOf="@id/field_description"
                app:layout_constraintTop_toBottomOf="@id/field_description">
                <AutoCompleteTextView
                    android:id="@+id/dropdown_select_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dropdown_select_status"
                    android:inputType="none"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>