<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddExpenseActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="635dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:focusableInTouchMode="true">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dropdown_box_type_expense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <AutoCompleteTextView
                    android:id="@+id/dropdown_select_type_expense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type_expense"
                    android:inputType="none"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/field_amount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/amount"
                app:layout_constraintEnd_toEndOf="@id/field_destination"
                app:layout_constraintStart_toStartOf="@id/field_destination"
                app:layout_constraintTop_toBottomOf="@id/field_destination">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/field_time_of_expense"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/time_of_the_expense"
                app:layout_constraintEnd_toEndOf="@id/dropdown_box_risk_assessment"
                app:layout_constraintStart_toStartOf="@id/dropdown_box_risk_assessment"
                app:layout_constraintTop_toBottomOf="@id/dropdown_box_risk_assessment">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_time_of_the_expense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="showDatePickerDialog"
                    android:inputType="datetime"
                    android:focusable="false"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/field_comment"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/comment"
                app:layout_constraintEnd_toEndOf="@id/field_date_of_the_trip"
                app:layout_constraintStart_toStartOf="@id/field_date_of_the_trip"
                app:layout_constraintTop_toBottomOf="@id/field_date_of_the_trip">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>